2005-06-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/editor.scm (editor-command-template-alist): Add syn
	editor (Jaap [de Vos]).

2005-06-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-ps2png.scm:
	* scm/ps-to-png.scm: New file.

	* scm/backend-library.scm (postscript->png): Use it.

	* scripts/lilypond-ps-to-png.py: Remove file.

	* python/lilylib.py (get_bbox, make_ps_images): Remove.

2005-06-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/auto-beam-engraver.cc (acknowledge_grob): remove dead code.

	* scm/auto-beam.scm (default-auto-beam-check): only forbid beam
	start on grace moment. Fixes autobeam-grace.ly.

	* lily/auto-beam-engraver.cc (process_acknowledged_grobs): don't
	process anything unless we're at the end of a pending beam. Fixes
	syncopated 8ths beamed across a beat.

2005-06-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/editor.scm (editor-command-template-alist): Start emacs if
	emaclient fails.

	* lily/main.cc (setup_localisation): Listen to LILYPOND_LOCALEDIR.

	* flower/file-path.cc (is_file, is_dir): Export.

	* lily/main.cc (prepend_env_path, set_env_file): Use them.

2005-06-02  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/easy-notation.cc: Added include cctype to correct
	compilation error.

2005-06-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/backend-library.scm (postscript->pdf): set resolution to
	1200, so bitmap fonts aren't that ugly. 

	* Documentation/topdocs/NEWS.tely (Top): add entry about font family.

	* lily/dynamic-engraver.cc (acknowledge_grob): only center on
	parent if we have a notehead. Fixes incorrect offsets when
	Paper_column is very wide in the X direction.

	* input/regression/font-family-override.ly (Module): new file.

	* scm/font.scm (make-pango-font-tree): new function.

	* lily/beam.cc (before_line_breaking): remove warning about less
	than 2 visible stems. We still get a warning when there is only
	one stem.

2005-06-01  Werner Lemberg  <wl@gnu.org>
