@@ -4,7 +4,7 @@ depth = ..
 NAME = lilypond
 SUBDIRS = include
 
-MODULE_LIBS= $(depth)/flower  $(depth)/ttftool $(depth)/kpath-guile 
+MODULE_LIBS= $(depth)/ttftool $(depth)/flower   $(depth)/kpath-guile 
 MODULE_INCLUDES= $(depth)/flower/include $(depth)/ttftool/include 
 MODULE_CXXFLAGS=
 
