@@ -1,3 +1,13 @@
+2005-06-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* flower/memory-stream.cc (Memory_out_stream): remove fopencookie support.
+
+	* ttftool/ttfps.c: use lily_cookie functions everywhere. 
+
+	* flower/include/file-cookie.hh: new file. lily_cookie extension 
+
+	* flower/file-cookie.cc: new file. lily_cookie extension.
+
 2005-06-06  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/editor.scm (editor-command-template-alist): Add syn
@@ -28,7 +38,7 @@
 2005-06-03  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/editor.scm (editor-command-template-alist): Start emacs if
-	emaclient fails.
+	emacslient fails.
 
 	* lily/main.cc (setup_localisation): Listen to LILYPOND_LOCALEDIR.
 
